2011-04-26  Matthew Blackwell  <blackwel@fas.harvard.edu>
	* R/embr.r (*): fixed problem with not updating imputations on observations without priors.

2011-03-25  Matthew Blackwell  <blackwel@fas.harvard.edu>
	* R/ameliagui.r (*): fixed intercs not being set (bug #4).
	
2010-11-03  Matthew Blackwell  <blackwel@fas.harvard.edu>

	* R/ameliagui.r (*): Major overhaul to main window. Most actions
	moved to application menus or context menus. 

2009-09-22  Matthew Blackwell <blackwel@fas.harvard.edu>
	* R/ameliagui.r (load.sessions, save.sessions): Sessions now
	properly handle the entry boxes on loading session. Sessions
	actually save bound matrix now.
	* R/diag.r (tscsPlot): Fixed a problem with rounding in the ceiling()
	function that caused the function to access the m+1st theta matrix,
	which obviously doesn't exist.
	* R/emb.r (amelia.impute): Fixed a problem when both bounds and
	priors were being used. 
	* R/missmap.R (missmap): Fixed a problem with the color inverting
	on a fully observed dataset. 

2009-09-10  Matthew Blackwell <blackwel@fas.harvard.edu>
	* R/ameliagui.r: Sessions work properly and save Amelia
	runs. structure of the GUI file is sensible now, with separate
	functions so that things don't depend on scoping. 

2010-05-07  Matthew Blackwell <blackwel@fas.harvard.edu>
	* R/plot.amelia (plot.amelia): 'ask' argument was unused in the
	function, should now not ask if ask=FALSE. 

2010-03-20  Matthew Blackwell <blackwel@fas.harvard.edu>
	* R/emb.r (startval): use starting values of data with prior means
	in place of missing values. 
	* R/prep.r (amelia.prep): is.na(data) was an old
	reference. changed to is.na(x). 

2010-02-20  Matthew Blackwell  <blackwel@fas.harvard.edu>
	* R/prep.r (amsubset): intercs=TRUE with polytime=NULL creates
	fixed effects. 
	* R/prep.r (amsubset): fixed problem with 1 column of non-idvar
	variables. 
	* R/amcheck.r (amcheck): enforces one-variable only error when cs
	is set but not used in imputation.